# ProjectX

./: .env  .gitignore  Cargo.toml  DOWNLOADS.md  LICENSE  README.md  sync.sh
.github/workflows/: pages.yml  release.yml
docs/: index.html
ember_benchmark/: README.md  analyze.py  common.py  download_data.sh  eval_projectx_parity.py  eval_scanner.py  parity_test.py  prepare_vectorized.py  preprocess.py  projectx_ember_adapter.py  projectx_ember_schema.py  run_benchmark.sh  run_full_eval.py  schema_mapping.json  schema_mapping.md  schema_mapping.py  setup.sh  train_scanner.py
packaging/linux/: install.sh  projectx.desktop.in
quarantine/: TestFile.txt
raw_benchmark/: README.md  benchmark_config.json  build_clean_corpus.py  common.py  download_malicious_corpus.py  evaluate_results.py  export_reports.py  next_steps.py  run_projectx_benchmark.sh  run_quick_test.sh  run_scans.py  setup_guest_env.sh
scripts/: bootstrap_vm.sh  make_px_icon.py  package_linux_release.sh  package_macos_app.sh  package_windows_release.ps1  remove_macos_quarantine.sh  view_results.py
src/: app_paths.rs  content_check.rs  file_scanner.rs  gui.rs  hash_check.rs  header_check.rs  header_list.rs  lib.rs  main.rs  setup.rs  update.rs
src/emulation/: api_hash.rs  mod.rs  pe.rs  script.rs  strings.rs
src/gui/: app.rs  mod.rs  state.rs  theme.rs
src/gui/components/: empty_state.rs  mod.rs  result_detail.rs  result_list.rs  status_bar.rs  summary_chip.rs  workspace_toolbar.rs
src/gui/pages/: about.rs  history.rs  mod.rs  overview.rs  reports.rs  scan.rs  settings.rs
src/ml/: features.rs  feedback.rs  mod.rs  model.rs  native_scanner.rs  portable_features.rs  portable_model.rs  threat_intel.rs
src/sandbox/: container.rs  mod.rs  monitor.rs  runner.rs  snapshot.rs
src/static/: config.rs  context.rs  mod.rs  orchestrator.rs  types.rs
tests/: calibration_regression.rs  ember_pe_benchmark.rs  external_format_benchmark.rs  final_validation_report.rs  gui_backend_models.rs  integration_cli_api.rs  intelligence_benchmark.rs  staged_validation.rs  suspicious_regression.rs
tests/support/: parser_fixtures.rs
(+130 files in other folders)
