[package]
name = "ProjectX"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31.1"
image = "0.25"
moxcms = "0.7.5"
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
dotenvy = "0.15"