[package]
name = "ProjectX"
version = "0.1.0"
edition = "2021"

[lib]
name = "projectx"
path = "src/lib.rs"

[features]
default = ["gui"]
gui = ["dep:eframe"]

[dependencies]
sha2 = "0.10.9"
hex = "0.4.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
regex = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
phf = { version = "0.11", features = ["macros"] }
dotenvy = "0.15"
flate2 = "1.1"
eframe = { version = "0.24.1", optional = true, default-features = false, features = ["default_fonts", "glow"] }
