[package]
name = "ProjectX"
version = "0.1.0"
edition = "2021"

[lib]
name = "projectx"
path = "src/lib.rs"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:rfd", "dep:notify"]

[dependencies]
crossbeam-channel = "0.5"
libc = "0.2"
sha2 = "0.10.9"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
regex = { version = "1", default-features = false, features = ["std", "perf", "unicode-case"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
phf = { version = "0.11", features = ["macros"] }
dotenvy = "0.15"
flate2 = "1.1"
eframe = { version = "0.24.1", optional = true, default-features = false, features = ["default_fonts", "glow"] }
rfd = { version = "0.14", optional = true }
notify = { version = "6.1", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "windef", "winbase", "libloaderapi"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
strip = "symbols"
debug = 0
debug-assertions = false
overflow-checks = false
incremental = false
